# AetherOs

./: .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  FUNCTIONAL_SUMMARY.md  README.md  README_ENHANCED.md  STATUS.md  SYSTEM_READY.md  comprehensive_test.py  demo.sh  docker-compose.yml  final_test.sh  launch_complete_demo.sh  run_demo.sh  simple_demo.sh  test_comprehensive.py  test_enhanced_probe.py  test_integration.py  test_process.py
auditor/: README.md  requirements.txt
auditor/src/: auditor.py
controller/: README.md  aether.py  requirements.txt
controller/policies/: policies.json
controller/src/: controller.py  controller_orig.py
controller/src/audit/: viewer.py
controller/src/policies/: __init__.py  manager.py
controller/src/snapshots/: __init__.py  manager.py
docs/: ARCHITECTURE.md
probe/: CMakeLists.txt  CMakeLists.txt.bak2  Makefile  README.md
probe/include/: loop_detector.h  process_monitor.h  system_interceptor.h  zmq_communicator.h
probe/src/: loop_detector.cpp  main.cpp  main.cpp.zmq_backup  probe.cpp  process_monitor.cpp  system_interceptor.cpp  zmq_communicator.cpp
tests/: debug_auditor.sh  debug_auditor2.sh  debug_test.sh  test_auditor.sh  test_auditor_simple.sh  test_controller.sh  test_probe.sh
